# v

./: CHANGELOG.md  DESIGN.md  LICENSE  test.txt  todo.md  v.cabal  v.prof
app/: CustomEditor.hs  Main.hs
benchmark/: BenchTextZipper.hs
src/: HighlightedText.hs
src/HighlightedText/: Internal.hs
src/Parsers/JSON/: Lexer.x  Parser.hs  Parser.y
src/Parsers/MiniML/: Lexer.hs  Lexer.x  Parser.info  Parser.y
test/: HighlightedTextSpec.hs
test/HighlightedText/: InternalSpec.hs
