cabal-version:      3.0
name:               v

-- The package version.
-- See the Haskell package versioning policy (PVP) for standards
-- guiding when and how versions should be incremented.
-- https://pvp.haskell.org
-- PVP summary:     +-+------- breaking API changes
--                  | | +----- non-breaking API additions
--                  | | | +--- code changes with no API change
version:            0.1.0.0

-- synopsis:
-- description:

license:            MIT
license-file:       LICENSE
author:             Diogo Biazus
maintainer:         diogo@biazus.ca
category:           Development
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

common language
    default-language: Haskell2010
    default-extensions: OverloadedStrings, LambdaCase

library
    import:           warnings
    import:           language
    hs-source-dirs:   src
    exposed-modules:  HighlightedText
    build-depends:    base          ^>=4.18.1.0
                    , text-zipper
                    , text
                    , bytestring

executable v
    import:           warnings
    import:           language
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules: CustomEditor

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    -- Other library packages from which modules are imported.
    build-depends:    base          ^>=4.18.1.0
                    , brick         ^>=2.1.1  
                    , vty           ^>=6.1
                    , microlens     >=0.3.0.0
                    , microlens-th  >=0.3.0.0
                    , microlens-mtl >=0.2.0.0
                    , text-zipper
                    , text
                    , bytestring
                    , v

    hs-source-dirs:   app
    ghc-options: -threaded -rtsopts -with-rtsopts=-N
