cabal-version:      3.0
name:               v
-- The package version.
-- See the Haskell package versioning policy (PVP) for standards
-- guiding when and how versions should be incremented.
-- https://pvp.haskell.org
-- PVP summary:     +-+------- breaking API changes
--                  | | +----- non-breaking API additions
--                  | | | +--- code changes with no API change
version:            0.1.0.0

synopsis:           Code editor
description:        Currently just a toy code editor
homepage:           https://github.com/diogob/postgres-websockets#readme
license:            MIT
license-file:       LICENSE
author:             Diogo Biazus
copyright:          2023 Diogo Biazus
maintainer:         diogo@biazus.ca
category:           Development
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

common language
    default-language: Haskell2010
    default-extensions: OverloadedStrings, LambdaCase

library
    import:             warnings
    import:             language
    hs-source-dirs:     src
    build-tools-depend: alex, happy
    exposed-modules:    HighlightedText
                        , HighlightedText.Internal
                        , Parsers.MiniML.Lexer
                        , Parsers.MiniML.Parser
    other-modules:      Parsers.JSON.Lexer
                        , Parsers.JSON.Parser
    build-depends:      base          ^>=4.18.1.0
                        , bytestring    ^>= 0.11.5
                        , text          ^>= 2.0.2
                        , text-zipper   ^>= 0.13
                        , brick         ^>=2.1.1  
                        , vty           ^>=6.1
                        , array         ^>=0.5.5.0

executable v
    import:           warnings
    import:           language
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules: CustomEditor

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    -- Other library packages from which modules are imported.
    build-depends:    base          ^>=4.18.1.0
                    , brick         ^>=2.1.1  
                    , vty           ^>=6.1
                    , microlens     ^>= 0.4.13
                    , microlens-mtl ^>= 0.2.0
                    , microlens-th  ^>= 0.4.3
                    , bytestring    ^>= 0.11.5
                    , text          ^>= 2.0.2
                    , text-zipper   ^>= 0.13
                    , v

    hs-source-dirs:   app
    ghc-options: -threaded -rtsopts -with-rtsopts=-N

test-suite v-test
    import:           warnings
    import:           language
    type:                exitcode-stdio-1.0
    hs-source-dirs:      test
    main-is:             Spec.hs
    other-modules:       HighlightedText.InternalSpec
                       , HighlightedTextSpec
    build-depends:       base
                       , hspec
                       , text-zipper   ^>= 0.13
                       , brick         ^>=2.1.1  
                       , v
    ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N

source-repository head
  type:     git
  location: https://github.com/diogob/v
